      3. /tmp/flash/onlinechanged/* 
      If a package needs actions on changes of online status create a script
      make/$package/files/root/etc/onlinechanged/$action_$package.

- New patches (read online help for more info):
    * 7270: 
     * Option to add Annex A firmware into image
     * Fix flashing of firmwares > 8 MB over webinterface
    * Add volume counter (7240, 7270)
    * Fix wrong usb mounts status message in AVM webinterface (7170, 7270)
    * Add new status bar design (optional)

- New packages, libs, modules:
    * aiccu 20070115
    * digitemp 3.6.0
    * flex (libflex) 2.5.35
    * gw6 5.1
    * hplip 2.8.12
    * hp-utils 0.3.2
    * iputils s20071127
    * libfreetz 0.1
    * lighttpd 1.4.21
    * mdev 0.6.2: First try to replace AVM's hotplug chain
      depends on 7170, 7240 and 7270.
    * nmap 4.68
    * owfs 2.7p7
    * pcre 7.8
    * radvd 1.2
    * ruby-fcgi 0.8.7
    * tcpproxy 2.0.0-beta15
    * transmission-cgi 0.0.1

- Updated tools and hooks:

- Updated patches:
    * add reiserfs to automountable filesystems
    * change nice names for USB devices (sdax > uStor0x, sdby > uStor1y, ...) 

- Updated packages and libs:
    * bftpd 2.3
    * curl 7.19.4
    * cyassl 0.9.9
    * dnsmasq 2.47
    * dtmfbox 0.5.0
    * e2fsprogs 1.41.3
    * eSpeak 1.40.02
    * glib 2.18.2
    * haserl 0.9.25
    * iodine 0.5.0
    * libpopt 1.14
    * lsof 4.81
    * ltrace 0.5 svn 81
    * mcabber 0.9.9
    * microperl 5.10.0
    * ntfs-3g 2009.2.1
    * openvpn 2.1_rc15
    * php 5.2.9
    * pingtunnel 0.70
    * pjproject 1.0.1
    * pptp 1.7.2
    * rrdstats (add Thomson THG 540)
    * rrdtool 1.2.30
    * strace 4.5.18
    * streamripper 1.64.0
    * stunnel 4.26
    * tor 0.2.0.34
    * transmission 1.51
    * vpnc 0.5.3
    * vsftpd 2.0.7: add SSL support

- Remove packages, libs, modules, tools:

- Firmware updates:
    * Please see FIRMWARES for the list of currently supported boxes and firmwares.

- BusyBox:
    * updated to 1.12.4
